
        [float]
        ===== Breaking changes

        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

* The agent will no longer report counting metrics with a value of zero, and will
  remove these metrics from the registry. ({pull}2163[#2163])

[[release-notes-3.18.0]]
==== 3.18.0 2021/07/20

[float]
===== Breaking changes

[float]
===== Features

* Trace an incoming HTTP/1.1 request to an HTTP/2 server using the
  https://nodejs.org/api/http2.html#http2_http2_createsecureserver_options_onrequesthandler[allowHTTP1]
  option. Before this change only incoming requests supporting HTTP/2 would
  be traced. ({pull}2143[#2143])

[float]
===== Bug fixes

* Fixed naming for outgoing HTTP spans to comply with the spec.
  https://github.com/elastic/apm/blob/master/specs/agents/tracing-instrumentation-http.md#http-client-spans
  Span names no longer include the path portion of the URL. ({pull}2161[#2161])

* Fix a header object re-use bug that prevented propagation of trace-context
  headers (`traceparent` et al) in AWS requests using AWS v4 signature auth.
  ({issues}2134[#2134])

* Fix a possible infinite loop in `captureError` when handling uncaught
  exceptions and the process is at or near its file descriptor limit
  (receiving EMFILE errors).  ({issues}2148[#2148])


[[release-notes-3.17.0]]
==== 3.17.0 2021/07/05

[float]
===== Features

* Add instrumentation of all AWS S3 methods when using the
  https://www.npmjs.com/package/aws-sdk[JavaScript AWS SDK v2] (`aws-sdk`).
* Add <<disable-send, `disableSend`>> configuration option. This supports some
  use cases using the APM agent **without** an APM server. ({issues}2101[#2101])
