@@ -264,6 +264,14 @@ apollo-server-express-2_15:
   node: '>=8'
   commands: node test/instrumentation/modules/apollo-server-express.test.js
 
+apollo-server-express-3_15:
+  name: apollo-server-express
+  preinstall: npm uninstall express-graphql
+  peerDependencies: graphql@^15.0.0
+  versions: '^3.0.0'
+  node: '>=12'
+  commands: node test/instrumentation/modules/apollo-server-express.test.js
+
 express-queue:
   versions: '>=0.0.11'
   commands: node test/instrumentation/modules/express-queue.test.js
