@@ -7,7 +7,7 @@ const clone = require('shallow-clone-shim')
 module.exports = function (apolloServerCore, agent, { version, enabled }) {
   if (!enabled) return apolloServerCore
 
-  if (!semver.satisfies(version, '^2.0.2')) {
+  if (!semver.satisfies(version, '^2.0.2 || ^3.0.0')) {
     agent.logger.debug('apollo-server-core version %s not supported - aborting...', version)
     return apolloServerCore
   }
